--- a/npm/source/sass/blocks/btn.scss
+++ b/npm/source/sass/blocks/btn.scss
@@ -9,8 +9,9 @@
   text-decoration: none;
   text-transform: uppercase;
   padding: 15px 30px;
+  transition: background-color .3s;
   
   &:hover {
-    background-color: $mainColor;
+    background-color: darken($secondColor, 20%);
   }
 }
