--- a/npm/source/sass/blocks/link-ask.scss
+++ b/npm/source/sass/blocks/link-ask.scss
@@ -3,11 +3,16 @@
   height: 100px;
   width: 320px;
   background-color: $secondColor;
+  transition: background-color .3s;
+
+  &:hover {
+    background-color: darken($secondColor, 7%);
+  }
 }
 
 .link-ask__icon {
   position: relative;
-  background-color: rgba(0, 0, 0, 0.1);
+  background-color: darken($secondColor, 7%);
   color: #fff;
   font-size: 32px;
   width: 100px;
