--- a/npm/source/sass/blocks/hamburger.scss
+++ b/npm/source/sass/blocks/hamburger.scss
@@ -8,7 +8,7 @@
   margin-right: 15px;
   width: 30px;
   height: 30px;
-  
+
 
   &::before {
     content: "";
@@ -24,11 +24,34 @@
     transition: all .3s;
   }
 
-  &:hover::before,
-  &--active::before {
+  &::after {
+    content: "";
+    position: absolute;
+    top: calc(50% + 6px);
+    left: 50%;
+    background-color: transparent;
+    transform: translate(-50%, -50%);
+    width: 80%;
+    height: 2px;
+    transition: all .3s;
+  }
+
+  &:hover::before {
     background-color: $secondColor;
     box-shadow: 0px -6px 0px 0px $secondColor,
       0px 6px 0px 0px $secondColor;
+  }
+
+  &--active::before {
+    transform: translate(-50%, -50%) rotate(-45deg);
+    background-color: $secondColor;
+    box-shadow: none !important;
+  }
+
+  &--active::after {
+    top: 50%;
+    transform: translate(-50%, -50%) rotate(45deg);
+    background-color: $secondColor;
   }
 }
 
