Весртка главной страницы

--- a/npm/source/sass/style.scss
+++ b/npm/source/sass/style.scss
@@ -25,3 +25,17 @@
 @import "blocks/carousel";
 
 @import "blocks/reviews-home";
+
+@import "blocks/clients-home";
+
+@import "blocks/project-home";
+
+@import "blocks/feedback";
+
+@import "blocks/input";
+
+@import "blocks/textarea";
+
+@import "blocks/main-footer";
+
+@import "blocks/social-network";
