--- a/npm/source/css/style.css
+++ b/npm/source/css/style.css
@@ -648,7 +648,176 @@ html {
   margin: 0;
   padding: 0; }
 
-@media (min-width: 576px) {
+.clients-home {
+  background-color: #ebebeb;
+  padding: 80px 0; }
+
+.clients-home__item {
+  flex: 0 0 50%;
+  height: 80px;
+  padding: 0 50px; }
+
+.project-home {
+  background-color: #454545;
+  background-image: url(../img/projectBG.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding: 50px 0; }
+
+.project-home .title p {
+  color: #fff;
+  opacity: 0.6; }
+
+.project-home .title h2 {
+  color: #fff; }
+
+.project-home__item {
+  display: flex;
+  flex-direction: column;
+  flex: 0 0 100%;
+  text-decoration: none;
+  padding: 0 15px; }
+
+.project-home__img {
+  margin-bottom: 20px;
+  width: 100%;
+  height: 250px; }
+
+.project-home__img img {
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: 100%;
+  height: 100%; }
+
+.project-home__item:hover h3 {
+  color: #01B9E6; }
+
+.project-home__item h3 {
+  color: #fff;
+  font-size: 20px;
+  line-height: 28px;
+  margin-top: 0;
+  margin-bottom: 20px;
+  transition: color .3s; }
+
+.project-home__item time {
+  display: block;
+  color: #868686; }
+
+.project-home__item time i {
+  margin-right: 5px; }
+
+.project-home .carousel__control {
+  top: 50%;
+  left: 0;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  width: 100%; }
+  .project-home .carousel__control::before {
+    content: none; }
+
+.feedback {
+  padding: 50px 0; }
+
+.feedback__title {
+  color: #454545;
+  font-size: 30px;
+  font-weight: bold;
+  text-transform: uppercase;
+  margin-top: 0;
+  margin-bottom: 20px; }
+
+.feedback__text > p {
+  color: #868686;
+  font-size: 14px;
+  font-weight: normal;
+  line-height: 22px;
+  margin-top: 0;
+  margin-bottom: 30px; }
+
+.feedback__form-wrapper {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 20px; }
+
+.feedback__input-wrapper {
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+  width: 45%; }
+
+.feedback__form .textarea {
+  height: 200px;
+  width: 45%; }
+
+.feedback__img {
+  display: none; }
+
+.input {
+  border: 1px solid #ddd;
+  font-family: inherit;
+  padding: 15px; }
+  .input:focus {
+    border-color: #01B9E6; }
+
+.textarea {
+  border: 1px solid #ddd;
+  font-family: inherit;
+  resize: none;
+  padding: 15px; }
+  .textarea:focus {
+    border-color: #01B9E6; }
+
+.main-footer {
+  background-color: #454545;
+  padding: 30px; }
+
+.main-footer__copyright {
+  margin: 0;
+  color: #fff; }
+
+.social-network {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 20px; }
+
+.social-network p {
+  border-left: 3px solid #01B9E6;
+  color: #fff;
+  text-transform: uppercase;
+  font-size: 17px;
+  font-weight: bold;
+  line-height: 25px;
+  margin-top: 0;
+  margin-bottom: 20px;
+  margin-right: 30px;
+  padding-left: 15px; }
+
+.social-network__wrapper {
+  display: flex;
+  list-style: none;
+  margin: 0;
+  padding: 0; }
+
+.social-network__wrapper li:last-child a {
+  margin-right: 0; }
+
+.social-network__wrapper a {
+  display: block;
+  background-color: #000;
+  color: #868686;
+  font-size: 25px;
+  line-height: 40px;
+  text-align: center;
+  margin-right: 10px;
+  width: 40px;
+  height: 40px;
+  transition: background-color .3s, color .3s; }
+  .social-network__wrapper a:hover {
+    background-color: #01B9E6;
+    color: #fff; }
+  @media (min-width: 576px) {
   .container {
     max-width: 540px; }
   .col-sm {
@@ -695,8 +864,7 @@ html {
   .col-sm-12 {
     flex: 0 0 100%;
     max-width: 100%; } }
-
-@media (min-width: 768px) {
+  @media (min-width: 768px) {
   .container {
     max-width: 720px; }
   .col-md {
@@ -757,9 +925,15 @@ html {
     right: 0;
     width: 320px; }
   .service__item {
-    width: 45%; } }
-
-@media (min-width: 992px) {
+    width: 45%; }
+  .project-home__item {
+    flex: 0 0 50%; }
+  .social-network {
+    align-items: center;
+    flex-direction: row; }
+  .social-network p {
+    margin-bottom: 0; } }
+  @media (min-width: 992px) {
   .container {
     max-width: 960px; }
   .col-lg {
@@ -895,9 +1069,23 @@ html {
   .about-us-home__img {
     padding: 0; }
   .reviews-home__item {
-    flex: 0 0 50%; } }
-
-@media (min-width: 1200px) {
+    flex: 0 0 50%; }
+  .clients-home__item {
+    flex: 0 0 25%; }
+  .feedback__img {
+    display: block;
+    padding: 0;
+    padding-left: 15px; }
+  .feedback__img img {
+    -o-object-fit: contain;
+       object-fit: contain;
+    width: 100%;
+    height: 100%; }
+  .main-footer .row {
+    align-items: center; }
+  .social-network {
+    margin-bottom: 0; } }
+  @media (min-width: 1200px) {
   .container {
     max-width: 1140px; }
   .col-xl {
