--- a/npm/source/sass/blocks/btn.scss
+++ b/npm/source/sass/blocks/btn.scss
@@ -3,6 +3,7 @@
   border: none;
   background-color: $secondColor;
   color: #fff;
+  cursor: pointer;
   font-family: inherit;
   font-size: 14px;
   font-weight: bold;
