--- a/npm/source/sass/style.scss
+++ b/npm/source/sass/style.scss
@@ -39,3 +39,15 @@
 @import "blocks/main-footer";
 
 @import "blocks/social-network";
+
+@import "blocks/title-page";
+
+@import "blocks/breadcrumb";
+
+@import "blocks/map";
+
+@import "blocks/contacts";
+
+@import "blocks/service-list";
+
+@import "blocks/service-content";
