--- a/npm/source/sass/blocks/feedback.scss
+++ b/npm/source/sass/blocks/feedback.scss
@@ -1,5 +1,5 @@
 .feedback {
-  padding: 50px 0;
+  padding: 100px 0;
 }
 
 .feedback__title {
@@ -45,14 +45,12 @@
 
 @media (min-width: $laptop) {
   .feedback__img {
-    display: block;
+    display: flex;
     padding: 0;
     padding-left: 15px;
   }
 
   .feedback__img img {
     object-fit: contain;
-    width: 100%;
-    height: 100%;
   }
 }
