--- a/npm/source/sass/blocks/service.scss
+++ b/npm/source/sass/blocks/service.scss
@@ -9,7 +9,8 @@
   display: flex;
   flex-direction: column;
   cursor: pointer;
-  margin-bottom: 35px;
+  text-decoration: none;
+  margin-bottom: 40px;
   width: 100%;
 
   &:hover {
@@ -56,7 +57,7 @@
   font-size: 20px;
   text-align: center;
   margin-top: 0;
-  margin-bottom: 15px;
+  margin-bottom: 10px;
   transition: color .3s;
 }
 
