--- a/npm/source/sass/blocks/clients-home.scss
+++ b/npm/source/sass/blocks/clients-home.scss
@@ -4,13 +4,6 @@
 }
 
 .clients-home__item {
-  flex: 0 0 50%;
-  height: 80px;
-  padding: 0 50px;
-}
-
-@media (min-width: $laptop) {
-  .clients-home__item {
-    flex: 0 0 25%;
-  }
+  padding: 0 25px;
+  outline: none;
 }
