--- a/npm/source/sass/blocks/project-home.scss
+++ b/npm/source/sass/blocks/project-home.scss
@@ -17,11 +17,9 @@
 }
 
 .project-home__item {
-  display: flex;
-  flex-direction: column;
-  flex: 0 0 100%;
   text-decoration: none;
   padding: 0 15px;
+  outline: none;
 }
 
 .project-home__img {
@@ -52,27 +50,8 @@
 .project-home__item time {
   display: block;
   color: #868686;
-
 }
 
 .project-home__item time i {
   margin-right: 5px;
 }
-
-.project-home .carousel__control {
-  top: 50%;
-  left: 0;
-  transform: translateY(-50%);
-  width: 100%;
-
-  &::before {
-    content: none
-  }
-}
-
-@media (min-width: $tablet) {
-  .project-home__item {
-    flex: 0 0 50%;
-  }
-}
-
