--- a/npm/source/sass/style.scss
+++ b/npm/source/sass/style.scss
@@ -46,6 +46,13 @@
 
 @import "blocks/contacts";
 
-@import "blocks/service-list";
+@import "blocks/side-bar";
 
 @import "blocks/service-content";
+
+@import "blocks/about-us";
+
+@import "blocks/collapse";
+
+@import "blocks/certificate";
+
