--- a/npm/source/sass/blocks/input.scss
+++ b/npm/source/sass/blocks/input.scss
@@ -1,7 +1,9 @@
 .input {
   border: 1px solid #ddd;
   font-family: inherit;
+  outline: none;
   padding: 15px;
+  transition: border-color .3s; 
   
   &:focus {
     border-color: $secondColor;
